--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,35 +1,33 @@
-# 使用轻量级的Python镜像
+# Use a lightweight Python image
 FROM python:3.10-alpine
 
-# 设定环境变量，确保Python输出直接打印到控制台，不产生Python字节码文件
-ENV PYTHONUNBUFFERED 1
-ENV PYTHONDONTWRITEBYTECODE 1
+# Set environment variables to ensure Python outputs are directed to the console and no bytecode files are generated
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
 
-# 设置工作目录
+# Set the working directory for the container
 WORKDIR /app/backend
 
-# 复制Python依赖文件
+# Copy the Python dependency file into the container
 COPY requirements.txt .
 
-# 安装GeoDjango所需的系统依赖，包括编译依赖和地理空间库
+# Install system dependencies required for GeoDjango, including compilation dependencies and geospatial libraries
 RUN apk update && \
     apk add --no-cache --virtual .build-deps gcc musl-dev postgresql-dev python3-dev && \
     apk add --no-cache geos gdal proj binutils postgresql-client && \
     pip install --no-cache-dir -r requirements.txt && \
     apk del .build-deps
 
-# 复制项目文件到容器内
+# Copy the entire project into the container
 COPY . .
 
-# 列出当前目录内容以确保脚本存在
-RUN ls -la
-
-# Copy the wait-for-postgres.sh script into our container and make it executable
+# Copy the wait-for-postgres.sh script into the container and make it executable
 COPY wait-for-postgres.sh /wait-for-postgres.sh
 RUN chmod +x /wait-for-postgres.sh
 
-# 列出根目录内容以确保脚本在那里
-RUN ls -la /
+# Copy the entrypoint.sh script into the container and make it executable
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-# 容器启动时运行Django开发服务器
-CMD ["/wait-for-postgres.sh", "postgresdb", "python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Set the container's entrypoint to the entrypoint.sh script
+ENTRYPOINT ["/entrypoint.sh"]
