Fix Dockerfile poetry bug

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,25 +5,21 @@ FROM python:3.10-alpine
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 
-# Install Poetry
-RUN apk add --no-cache curl && \
-    curl -sSL https://install.python-poetry.org | python3 - && \
-    apk del curl
-
-# Set environment variable to ensure Poetry installs dependencies globally
-ENV POETRY_VIRTUALENVS_CREATE=false
-
 # Set the working directory for the container
 WORKDIR /app/backend
 
-# Copy the Poetry dependency files into the container
-COPY pyproject.toml poetry.lock ./
+# Install Poetry
+RUN pip install poetry
+
+# Copy the Python dependency file into the container
+COPY pyproject.toml poetry.lock* ./
 
 # Install system dependencies required for GeoDjango, including compilation dependencies and geospatial libraries
 RUN apk update && \
     apk add --no-cache --virtual .build-deps gcc musl-dev postgresql-dev python3-dev && \
     apk add --no-cache geos gdal proj binutils postgresql-client && \
-    poetry install --no-interaction --no-ansi && \
+    poetry config virtualenvs.create false && \
+    poetry install --no-dev --no-interaction --no-ansi && \
     apk del .build-deps
 
 # Copy the entire project into the container
